fix footer-text on mobile

--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ header {
 }
 .footer {
     width: 100%;
-    padding: 10px 0;
+    padding: 20px 0;
     text-align: center;
     font-size: 15px;
     color: #666;
